...
    navigation.navigate(Constants.SCREENS.FAVOURITE.SERVICE_PROVIDER);
  };

  return (
    <Container>
      <TouchableOpacity
        accessibilityLabel="favourite-service-menu"
        testID="favourite-service-menu"
        style={{
          flexDirection: "row",
          justifyContent: "space-between",
          alignItems: "center",
          paddingHorizontal: 16,
...
          height: 1,
          width: "100%",
          backgroundColor: Colors.gray_light,
        }}
      />
      <TouchableOpacity
        accessibilityLabel="favourite-provider-menu"
        testID="favourite-provider-menu"
        style={{
          flexDirection: "row",
          justifyContent: "space-between",
          alignItems: "center",
          paddingHorizontal: 16,
...
