...
        </Text>
        <Text style={{ textAlign: "center" }}>
          26/2, Sukhumvit soi 61, Klongton-Nua, Wattana, Bangkok
        </Text>
        <View style={{ marginTop: 24, width: 200 }}>
          <Button
            title="Privacy Policy"
            onPress={() => {
              props.navigation.push(Constants.SCREENS.OTHER.ABOUT_US_VIEW, {
                url: 'https://akaiunsan.com/privacy-policy',
              });
            }}
            textStyle={{ textAlign: "center" }}
          />
          <View style={{ height: 8 }} />
          <Button
            title="Term of Use"
            onPress={() => {
              props.navigation.push(Constants.SCREENS.OTHER.ABOUT_US_VIEW, {
                url: 'https://akaiunsan.com/terms-of-service',
              });
            }}
            textStyle={{ textAlign: "center" }}
...
