...
    <View style={styles.container}>
      <Container style={styles.container}>
        <View style={[styles.containerHeader]}>
          <View style={{ marginLeft: 10 }}>
            {currentStep != 4 ? (
              <TouchableOpacity
                accessibilityLabel="service-back-button"
                testID="service-back-button"
                onPress={() =>
                  currentStep === 0
                    ? props.navigation.navigate(
                        Constants.SCREENS.MAIN.BOTTOM_BAR
                      )
...
            </View>
            {isCreditCard && currentStep === 3 && !idCard ? (
              <Button
                disabled={disabledNext}
                onPress={onPressNext}
                style={styles.buttonBottom}
                accessibilityLabel="service-next-button"
                testID="service-next-button"
                title={i18n.t("home.select_card")}
              />
            ) : (
              <Button
                disabled={disabledNext}
...
